feat: 템플릿 이용한 유저 목록 출력